# POO2_Lab16

./: Bank.cpp  CMakeLists.txt  classDiagram.mdj  main.cpp  mini_rapport.docx  uml.mdj  ~$ni_rapport.docx
headers/Controller/: Controller.h
headers/Model/: Bank.h  Boat.h  Child.h  Container.h  Cop.h  Daughter.h  FamilyMember.h  Father.h  Model.h  Mother.h  Parent.h  Person.h  Rule.h  Rules.h  Son.h  Thief.h
headers/View/: View.h
source/: main.cpp
source/Controller/: Controller.cpp
source/Model/: Boat.cpp  Container.cpp  Person.cpp  Rule.cpp
source/View/: View.cpp
source/controller/: Controller.cpp
source/view/: View.cpp
